Changed Text Colors

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,6 +3,10 @@
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
+ 
+.text-yellow-50 {
+	color: #f7f300;
+}
 
 #mainNav {
   min-height: 56px;
@@ -104,8 +108,8 @@
   font-family: 'Varela Round';
   font-size: 2.5rem;
   line-height: 2.5rem;
-  letter-spacing: 0.8rem;
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  letter-spacing: 0.4rem;
+  background: -webkit-linear-gradient(rgba(195, 255, 77, 0.9), rgba(58, 255, 219, 0.39));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
